<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.CreateFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_text"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:textStyle="bold"
                    android:maxLength="24"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scrollbars="none"
                android:background="@drawable/rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <LinearLayout
                    android:id="@+id/photo_scroll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>

            <Button
                android:id="@+id/add_photo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/post_description"
                    android:maxLength="95"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_post_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/publish_post" />
        </LinearLayout>
    </FrameLayout>
